feat: form to create a new job

--- a/src/styles.module.scss
+++ b/src/styles.module.scss
@@ -41,6 +41,15 @@
       }
     }  
   }
+
+  form {
+    position: fixed;
+    right: 250px;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
 }
 
 .container__search__bar {
